--- a/main.css
+++ b/main.css
@@ -2,6 +2,15 @@
     body {
         
     }
+    html {
+        background-image: url(myCaddybackground.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: fixed;
+        height: 100%;
+        margin: 0;
+    }
     #buttoncontainer {
         display: flex;
         flex-direction: column;
@@ -10,10 +19,20 @@
     }
     #homePageButton {
         border: 1px solid white;
+        opacity: .9;
         padding: 10px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 10px;
         border-radius: 10px;
+        border: none;
         height: 80px;
+    }
+    #text {
+        border: 1px solid black;
+    }
+    #signInButton {
+        height: 40px;
+        width: 80px;
+        background-color: rgba(255, 255, 255, .5);
+        border-radius: 20px;
     }
 }
