--- a/public/main.css
+++ b/public/main.css
@@ -1,36 +1,149 @@
 
     
     html {
-        background-image: url(myCaddybackground.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         background-attachment: fixed;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+
+    }
+
+    body {
+        font-family: 'Alegreya Sans SC', sans-serif;
+        margin: 0;
+        padding: 0;
+        line-height: 1;
+        /* overflow: hidden; */
+        height: 100%;
+    }
+
+
+    #navbarDiv {
+        background-color: white; 
+        border-bottom: solid lightgrey 1px;
+    }
+
+    #profilePicDiv {
+        text-align: center;  
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #profilePic {
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        border: solid black 1px;;
+    }
+
+
+    #logInButton {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        border: none;
+        background: white;
+   
+    }
+
+    #logInButtonText {
+        width: 100%;
+        position: absolute;
+        padding: 0;
+    }
+
+    #logInButtonTemplate {
+        width: 90%;
         height: 100%;
         margin: 0;
+        padding: 0;
+        float: right;
     }
-    #buttoncontainer {
+
+    #logInButtonDiv {
+        top: 0px;
+    }
+
+    #MyCaddyLogo {
+        width: 100%;
+    }
+
+    #MyCaddyLogoDiv {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .col-3 {
+        padding: 0;
+        margin: 0;
+    }
+
+    .col-6 {
+        padding: 0;
+        margin: 0;
+    }
+
+
+    #buttonContainer {
+        height: 90%;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        height: 80vh;
-    }
-    #homePageButton {
-        border: 1px solid white;
-        opacity: .9;
-        padding: 10px;
-        margin: 10px;
-        border-radius: 10px;
-        border: none;
-        height: 80px;
-    }
-    #text {
-        border: 1px solid black;
-    }
-    #signInButton {
-        height: 40px;
-        width: 80px;
-        background-color: rgba(255, 255, 255, .5);
-        border-radius: 20px;
     }
 
+    #startARoundDiv {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #startARoundButtonImage{
+        width: 100%;
+    }
+
+    #myStatsDiv {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #myStatsButtonImage {
+        width: 100%;
+    }
+
+    #myProfileButtonDiv {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #myProfileButtonImage {
+        width: 100%;
+    }
+
+    #settingsButtonDiv {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #settingsButtonImage {
+        width: 100%;
+    }
+
+    .col-3 {
+        padding: 0;
+    }
+
+    .col-6 {
+        padding: 0;
+    }
+
+    .col-9 {
+        padding: 0;
+    }
