--- a/public/main.css
+++ b/public/main.css
@@ -21,6 +21,30 @@
     }
 
 
+    #logInScreenDiv {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        background-color: #1bb06b;
+    }
+
+    #logInMiddleColumnDiv {
+        text-align: center;
+    }
+
+    #wizardLogoLogInScreen {
+        width: 75%;
+        padding: 10px;
+    }
+
+    #myCaddyLogoLogInScreen {
+        width: 100%;
+        padding-bottom: 10px;
+    }
+
+
     #navbarDiv {
         background-color: white; 
         border-bottom: solid lightgrey 1px;
