--- a/public/main.css
+++ b/public/main.css
@@ -9,6 +9,16 @@ html {
 
 }
 
+.modal-title {
+    margin-left: 10px;
+}
+#signupImage {
+    margin-top: 10px;
+    margin-right: 10px;
+    height: 30px;
+    width: 150px;
+}
+
 body {
     font-family: 'Alegreya Sans SC', sans-serif;
     margin: 0;
