updated the log in page to respond to incorrect log in attempts. Modified the modal for statistics and set it up so that it can display information from the database once it is manipulated

--- a/public/main.css
+++ b/public/main.css
@@ -9,6 +9,35 @@ html {
 
 }
 
+.modal-body hr {
+    margin: 5px;
+}
+
+.statistics {
+    font-size: 15px;
+}
+
+.statistics p {
+    margin: 5px;
+}
+
+.statistics h6{
+    font-size: 20px;
+    margin: 5px;
+}
+
+#userNameError {
+    padding-top: 3px;
+    height: .5em;
+    color: red;
+}
+
+#passwordError {
+    padding-top: 3px;
+    height: .5em;
+    color: red;
+}
+
 .modal-title {
     margin-left: 10px;
 }
