--- a/public/main.css
+++ b/public/main.css
@@ -22,6 +22,11 @@ html {
     background-color: #1bb06b;
 }
 
+#nextHole {
+    width: 100%;
+    
+}
+
 #selectCourseDropdownData {
     width: 100%;
     height: auto;
