--- a/public/main.css
+++ b/public/main.css
@@ -8,6 +8,12 @@ html {
     height: 100%;
 
 }
+
+body {
+    margin: 0!important;
+    padding: 0!important;
+}
+
 #profilepage {
     height: 70vh;
     width: 90vw;
